--- a/books/Settings.storyboard
+++ b/books/Settings.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -50,7 +51,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Open Source Libraries" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="q85-7d-T3e">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Attributions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="q85-7d-T3e">
                                                     <rect key="frame" x="59" y="0.0" width="281" height="43"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -167,22 +168,58 @@
         <scene sceneID="uR9-ef-uyB">
             <objects>
                 <viewController id="NDc-mV-o8s" sceneMemberID="viewController">
-                    <textView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" id="EFb-Eg-Fb6">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mTj-vV-qJE"/>
+                        <viewControllerLayoutGuide type="bottom" id="a7V-s0-q04"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1uY-i2-SfU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G9w-61-xeG" userLabel="source">
+                                <rect key="frame" x="16" y="72" width="271" height="81.5"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Reading List is open source; the source is available at https://github.com/AndrewBennet/readinglist.">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="github" translatesAutoresizingMaskIntoConstraints="NO" id="yWA-Cn-Erp">
+                                <rect key="frame" x="287" y="72" width="72" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="jK5-nL-kqR"/>
+                                    <constraint firstAttribute="height" constant="72" id="xNW-PG-PCh"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To report a problem, or suggest an improvement, please raise an issue at https://github.com/AndrewBennet/readinglist/issues." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptF-59-2W7" userLabel="reportProblem">
+                                <rect key="frame" x="16" y="152" width="343" height="81.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <string key="text">Reading List is open source; the source is available at https://github.com/AndrewBennet/readinglist.  To report a problem, or suggest an improvement, please raise an issue at https://github.com/AndrewBennet/readinglist/issues.</string>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                        <dataDetectorType key="dataDetectorTypes" link="YES"/>
-                    </textView>
+                        <constraints>
+                            <constraint firstItem="yWA-Cn-Erp" firstAttribute="top" secondItem="G9w-61-xeG" secondAttribute="top" id="6C9-Ma-l5Y"/>
+                            <constraint firstItem="G9w-61-xeG" firstAttribute="leading" secondItem="1uY-i2-SfU" secondAttribute="leadingMargin" id="W75-fe-zRc"/>
+                            <constraint firstItem="ptF-59-2W7" firstAttribute="leading" secondItem="1uY-i2-SfU" secondAttribute="leadingMargin" id="Wgx-bD-Obq"/>
+                            <constraint firstItem="yWA-Cn-Erp" firstAttribute="trailing" secondItem="1uY-i2-SfU" secondAttribute="trailingMargin" id="cbh-hs-MCu"/>
+                            <constraint firstItem="ptF-59-2W7" firstAttribute="trailing" secondItem="1uY-i2-SfU" secondAttribute="trailingMargin" id="gyG-rf-NKD"/>
+                            <constraint firstItem="G9w-61-xeG" firstAttribute="top" secondItem="mTj-vV-qJE" secondAttribute="bottom" constant="8" id="pGi-Ev-g7Y"/>
+                            <constraint firstItem="ptF-59-2W7" firstAttribute="top" secondItem="yWA-Cn-Erp" secondAttribute="bottom" constant="8" id="s0N-aD-9sZ"/>
+                            <constraint firstItem="yWA-Cn-Erp" firstAttribute="leading" secondItem="G9w-61-xeG" secondAttribute="trailing" id="zCc-a1-sD0"/>
+                        </constraints>
+                    </view>
                     <navigationItem key="navigationItem" title="About" id="GVF-Zk-ULF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HIL-0h-4aH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2318" y="24"/>
+            <point key="canvasLocation" x="2317.5999999999999" y="23.838080959520241"/>
         </scene>
-        <!--Open Source Libraries-->
+        <!--Attributions-->
         <scene sceneID="AQn-aB-NBm">
             <objects>
                 <viewController id="u8f-T2-ckJ" sceneMemberID="viewController">
@@ -200,7 +237,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <dataDetectorType key="dataDetectorTypes" link="YES"/>
                     </textView>
-                    <navigationItem key="navigationItem" title="Open Source Libraries" id="3lY-Tn-FqW"/>
+                    <navigationItem key="navigationItem" title="Attributions" id="3lY-Tn-FqW"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QLt-2m-pcu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -210,6 +247,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <resources>
         <image name="about" width="29" height="29"/>
         <image name="code" width="29" height="29"/>
+        <image name="github" width="72" height="72"/>
         <image name="heart" width="29" height="29"/>
     </resources>
 </document>
